[gd_scene load_steps=5 format=3 uid="uid://ckprt80d57mru"]

[ext_resource type="Script" path="res://Gun.gd" id="1_0uwvk"]
[ext_resource type="Texture2D" uid="uid://bjuswrypgt7s4" path="res://solid_logo.png" id="2_oyshu"]
[ext_resource type="Texture2D" uid="uid://dop7vs4wv6dxb" path="res://icon.svg" id="3_d7hrv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urd61"]
size = Vector2(262, 145)

[node name="Gun" type="Node2D"]
position = Vector2(-0.543088, 1.03078)
script = ExtResource("1_0uwvk")

[node name="GunSprite" type="Sprite2D" parent="."]
position = Vector2(11.3433, -1.38449)
scale = Vector2(0.143747, 0.0524017)
texture = ExtResource("2_oyshu")

[node name="BulletSpawnPoint" type="Marker2D" parent="GunSprite"]
position = Vector2(61.5839, 3.03495)

[node name="Sprite2D" type="Sprite2D" parent="GunSprite/BulletSpawnPoint"]
position = Vector2(0.965652, 0.181538)
scale = Vector2(0.241769, 0.593426)
texture = ExtResource("3_d7hrv")

[node name="RangeComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RangeCollision" type="CollisionShape2D" parent="RangeComponent"]
position = Vector2(173.543, -1.53078)
shape = SubResource("RectangleShape2D_urd61")

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
